SERVER-50875 Coverity analysis defect 115634: Uninitialized scalar field

GitOrigin-RevId: ca450f2e713bb9d66ae8c6ac449f2a40c6b5c01c